vpc.template
{
  "AWSTemplateFormatVersion":"2010-09-09",
  "Description":"Create a VPC to house the Salt Server",

  "Parameters":{
    "vpcCIDR":{
      "Description":"The IP Address range for the SaltStack VPC",
      "Type":"String",
      "Default":"10.10.0.0/16"
    },
    "publicSubnetCIDR":{
      "Description":"The IP Address range for the public subnet",
      "Type":"String",
      "Default":"10.10.0.0/24"
    },
    "privateSubnetCIDR":{
      "Description":"The IP Address range for the private subnet",
      "Type":"String",
      "Default":"10.10.1.0/24"
    }
  },

  "Resources":{
    "saltVPC":{
      "Type":"AWS::EC2::VPC",
      "Properties":{
        "CidrBlock":{"Ref":"vpcCIDR"},
        "EnableDnsSupport":true,
        "EnableDnsHostnames":true,
        "InstanceTenancy":"default",
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",[{"Ref":"AWS::StackName"},{"Ref":"AWS::Region"},"vpc"]]}}
        ]
      }
    },
    "internetGateway":{
      "Type":"AWS::EC2::InternetGateway",
      "Properties":{
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",["igw",{"Ref":"AWS::StackName"},{"Ref":"AWS::Region"},"vpc"]]}}
        ]
      }
    },
    "attachInternetGateway":{
      "Type":"AWS::EC2::VPCGatewayAttachment",
      "Properties":{
        "InternetGatewayId":{"Ref":"internetGateway"},
        "VpcId":{"Ref":"saltVPC"}
      }
    },
    "publicRouteTable":{
      "Type":"AWS::EC2::RouteTable",
      "Properties":{
        "VpcId":{"Ref":"saltVPC"},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",["public-route",{"Ref":"AWS::StackName"},{"Ref":"AWS::Region"},"vpc"]]}}
        ]
      }
    },
    "privateRouteTable":{
      "Type":"AWS::EC2::RouteTable",
      "Properties":{
        "VpcId":{"Ref":"saltVPC"},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",["private-route",{"Ref":"AWS::StackName"},{"Ref":"AWS::Region"},"vpc"]]}}
        ]
      }
    },
    "publicRoute":{
      "Type":"AWS::EC2::Route",
      "DependsOn":"internetGateway",
      "Properties":{
        "DestinationCidrBlock":"0.0.0.0/0",
        "RouteTableId":{"Ref":"publicRouteTable"},
        "GatewayId":{"Ref":"internetGateway"}
      }
    },
    "privateRoute":{
      "DependsOn":"NATGateway",
      "Type":"AWS::EC2::Route",
      "Properties":{
        "DestinationCidrBlock":"0.0.0.0/0",
        "RouteTableId":{"Ref":"privateRouteTable"},
        "NatGatewayId":{"Ref":"NATGateway"}
      }
    },
    "publicSubnet":{
    "Type":"AWS::EC2::Subnet",
      "Properties":{
        "VpcId":{"Ref":"saltVPC"},
        "AvailabilityZone":{"Fn::Select":["0",{"Fn::GetAZs":""}]},
        "CidrBlock":{"Ref":"publicSubnetCIDR"},
        "MapPublicIpOnLaunch":false,
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",["public",{"Fn::Select":["0",{"Fn::GetAZs":""}]},{"Ref":"AWS::StackName"},"subnet"]]}}
        ]
      }
    },
    "privateSubnet":{
    "Type":"AWS::EC2::Subnet",
      "Properties":{
        "VpcId":{"Ref":"saltVPC"},
        "AvailabilityZone":{"Fn::Select":["0",{"Fn::GetAZs":""}]},
        "CidrBlock":{"Ref":"privateSubnetCIDR"},
        "MapPublicIpOnLaunch":false,
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",["private",{"Fn::Select":["0",{"Fn::GetAZs":""}]},{"Ref":"AWS::StackName"},"subnet"]]}}
        ]
      }
    },
    "publicSubnetRouteTableAssociation":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Properties":{
        "SubnetId":{"Ref":"publicSubnet"},
        "RouteTableId":{"Ref":"publicRouteTable"}
      }
    },
    "privateSubnetRouteTableAssociation":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Properties":{
        "SubnetId":{"Ref":"privateSubnet"},
        "RouteTableId":{"Ref":"privateRouteTable"}
      }
    },
    "NATGateway":{
      "DependsOn":"internetGateway",
      "Type":"AWS::EC2::NatGateway",
      "Properties":{
        "AllocationId":{"Fn::GetAtt":["NATElasticIPAddress","AllocationId"]},
        "SubnetId":{"Ref":"publicSubnet"}
      }
    },
    "NATElasticIPAddress":{
      "Type":"AWS::EC2::EIP",
      "Properties":{
        "Domain":"vpc"
      }
    }
  },

  "Outputs":{
    "privateSubnetID":{
      "Description":"The ID of the private subnet",
      "Value":{"Ref":"privateSubnet"}
    },
    "publicSubnetID":{
      "Description":"The ID of the public subnet",
      "Value":{"Ref":"publicSubnet"}
    },
    "vpcID":{
      "Description":"The ID of the VPC",
      "Value":{"Ref":"saltVPC"}
    }
  }
}
